# pujOgre

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/Billiards/: CMakeLists.txt  main.cxx
apps/Billiards/resources/: CMakeLists.txt  Table0.mesh  Table1.mesh  Table2.mesh  Table3.mesh  Table4.mesh  billiards.scenexx  materials.material  red_ball.mesh  resources.cfg.in  white_ball.mesh  yellow_ball.mesh
apps/Tejo/: CMakeLists.txt  main.cxx
apps/Tejo/resources/: CMakeLists.txt  resources.cfg.in  tejo.scenexx
bash/: CMakeLists.txt  ParametricViewer.cxx  SceneViewer.cxx
cmake/: pujOgreBase.cmake  pujOgreConfig.cmake.in
data/: default.material  sphere.scenexx
lib/PUJ_Ogre/: Application.cxx  Application.h  ApplicationWithBullet.cxx  ApplicationWithBullet.h  CMakeLists.txt
lib/pujOgre/: BaseApplication.cxx  BaseApplication.h  BaseListener.cxx  BaseListener.h  CMakeLists.txt  Config.h
plugins/DotXXSceneLoader/: CMakeLists.txt
plugins/DotXXSceneLoader/PUJ_Ogre/: DotXXSceneLoader.cxx  DotXXSceneLoader.h  DotXXSceneLoader_parametric2.cxx  DotXXSceneLoader_vtk.cxx
plugins/DotXXSceneLoader/PUJ_Ogre/vtk/: ParametricFunction.cxx  ParametricFunction.h
src/: CMakeLists.txt
src/destino48/: CMakeLists.txt  main.cxx
